# django-plastic-tickets

./: .gitignore  MANIFEST.in  setup.cfg
django_plastic_tickets/: admin.py  apps.py  forms.py  models.py  ral_colors.py  translation.py  urls.py  util.py  views.py
django_plastic_tickets/data/: ral_colors.json
django_plastic_tickets/fixtures/: initial_data.json
django_plastic_tickets/jinja2/plastic_tickets/: ticket_mail.txt
django_plastic_tickets/locale/de/LC_MESSAGES/: django.po
django_plastic_tickets/migrations/: 0001_initial.py  0002_auto_20210423_2334.py  0003_auto_20210505_1644.py
django_plastic_tickets/templates/plastic_tickets/: new_ticket.html  new_ticket_file_form.html  new_ticket_file_upload.html  new_ticket_start.html  new_ticket_submit.html  overview.html  ticket_list_view.html  ticket_view.html
django_plastic_tickets/templatetags/: plastic_extras.py
